--- a/HomeDecorAPI.Application/HomeDecorAPI.Application.csproj
+++ b/HomeDecorAPI.Application/HomeDecorAPI.Application.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Shared\Constants\" />
+    <Folder Include="Shared\Utilities\" />
+    <Folder Include="Persistence\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Contracts\" />
+    <Folder Include="MappingProfile\" />
+    <Folder Include="UnitOfWork\" />
+    <Folder Include="Shared\DTOs\" />
+    <Folder Include="Services\" />
+    <Folder Include="Shared\ErrorModel\" />
+    <Folder Include="Shared\RequestFeatures\" />
+  </ItemGroup>
+
 </Project>
