--- a/HomeDecorAPI.Domain/HomeDecorAPI.Domain.csproj
+++ b/HomeDecorAPI.Domain/HomeDecorAPI.Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Exceptions\" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
   </ItemGroup>
 
 </Project>
