--- a/HomeDecorAPI.Infrastructure.SQLServer/HomeDecorAPI.Infrastructure.SQLServer.csproj
+++ b/HomeDecorAPI.Infrastructure.SQLServer/HomeDecorAPI.Infrastructure.SQLServer.csproj
@@ -27,4 +27,9 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HomeDecorAPI.Application\HomeDecorAPI.Application.csproj" />
+    <ProjectReference Include="..\HomeDecorAPI.Domain\HomeDecorAPI.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
