--- a/HomeDecorAPI/appsettings.json
+++ b/HomeDecorAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ApplicationConnection": "server=LAPTOP-FB3CVU9M\\SQLEXPRESS; database=HomeDecorAPI; Integrated Security=true; TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
