add auth service

--- a/HomeDecorAPI/appsettings.json
+++ b/HomeDecorAPI/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "ApplicationConnection": "server=LAPTOP-FB3CVU9M\\SQLEXPRESS; database=HomeDecorAPI; Integrated Security=true; TrustServerCertificate=True"
   },
+  "JwtSettings": {
+    "validIssuer": "TranTuanHungHomeDecor2024",
+    "validAudience": "https://localhost:5001",
+    "secretKey": "TRANTUANHUNG_TranTuanHung_HOMEDECOR_2024_123456789_2003_WEBSITE",
+    "expires": 10
+  },
   "AllowedHosts": "*"
 }
