add features address and upload services

--- a/HomeDecorAPI/appsettings.json
+++ b/HomeDecorAPI/appsettings.json
@@ -14,5 +14,10 @@
     "secretKey": "TRANTUANHUNG_TranTuanHung_HOMEDECOR_2024_123456789_2003_WEBSITE",
     "expires": 10
   },
+  "Cloudinary": {
+    "CloudName": "HomeDecor",
+    "ApiKey": "566212755758574",
+    "ApiSecret": "mFJMRzauU8Vbs2KjVswFn6IrHAE"
+  },
   "AllowedHosts": "*"
 }
