--- a/HomeDecorAPI/appsettings.json
+++ b/HomeDecorAPI/appsettings.json
@@ -14,10 +14,31 @@
     "secretKey": "TRANTUANHUNG_TranTuanHung_HOMEDECOR_2024_123456789_2003_WEBSITE",
     "expires": 10
   },
-  "Cloudinary": {
-    "CloudName": "HomeDecor",
+  "CloudinarySettings": {
+    "CloudName": "dphbiiclr",
     "ApiKey": "566212755758574",
     "ApiSecret": "mFJMRzauU8Vbs2KjVswFn6IrHAE"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  {
+    "Serilog": {
+      "MinimumLevel": {
+        "Default": "Information",
+        "Override": {
+          "Microsoft": "Warning",
+          "System": "Warning"
+        }
+      },
+      "WriteTo": [
+        {
+          "Name": "File",
+          "Args": {
+            "path": "Logs/log-.txt",
+            "rollingInterval": "Day",
+            "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+          }
+        }
+      ]
+    }
+  }
 }
