fix bug service manager

--- a/HomeDecorAPI/appsettings.json
+++ b/HomeDecorAPI/appsettings.json
@@ -9,10 +9,16 @@
     "ApplicationConnection": "server=LAPTOP-FB3CVU9M\\SQLEXPRESS; database=HomeDecorAPI; Integrated Security=true; TrustServerCertificate=True"
   },
   "JwtSettings": {
-    "validIssuer": "TranTuanHungHomeDecor2024",
-    "validAudience": "https://localhost:5001",
-    "secretKey": "TRANTUANHUNG_TranTuanHung_HOMEDECOR_2024_123456789_2003_WEBSITE",
-    "expires": 10
+    "SecurityKey": "TRANTUANHUNG_TranTuanHung_HOMEDECOR_2024_123456789_2003_WEBSITE",
+    "ValidIssuer": "TranTuanHungHomeDecor2024",
+    "ValidAudience": "https://localhost:5001",
+    "TokenExpiryMinutes": 30,
+    "RefreshTokenExpiryDays": 7,
+    "RequireExpirationTime": true,
+    "ValidateIssuer": true,
+    "ValidateAudience": true,
+    "ValidateLifetime": true,
+    "ValidateIssuerSigningKey": true
   },
   "CloudinarySettings": {
     "CloudName": "dphbiiclr",
