--- a/HomeDecorAPI.Application/ManboShopAPI.Application.csproj
+++ b/HomeDecorAPI.Application/ManboShopAPI.Application.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HomeDecorAPI.Domain\HomeDecorAPI.Domain.csproj" />
+    <ProjectReference Include="..\HomeDecorAPI.Domain\ManboShopAPI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
