--- a/HomeDecorAPI/ManboShopAPI.Presentation.csproj
+++ b/HomeDecorAPI/ManboShopAPI.Presentation.csproj
@@ -1,33 +1,31 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\HomeDecorAPI.Application\ManboShopAPI.Application.csproj" />
+    <ProjectReference Include="..\HomeDecorAPI.Domain\ManboShopAPI.Domain.csproj" />
+    <ProjectReference Include="..\HomeDecorAPI.Infrastructure.SQLServer\ManboShopAPI.Infrastructure.SQLServer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HomeDecorAPI.Application\HomeDecorAPI.Application.csproj" />
-    <ProjectReference Include="..\HomeDecorAPI.Domain\HomeDecorAPI.Domain.csproj" />
+    <Folder Include="wwwroot\images\users\" />
   </ItemGroup>
 
 </Project>
